--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 # SQLite version 3.x
 #   gem install sqlite3
-#
+#   gem install sqlite3 required. 
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
